--- a/shipkeep-app/frontend/public/index.html
+++ b/shipkeep-app/frontend/public/index.html
@@ -3,29 +3,17 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <!-- START - Carl Added -->
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><path d='M10 50 C 20 20, 80 20, 90 50' stroke='%234B5563' stroke-width='5' fill='none'/><path d='M5 80 L 95 80' stroke='%234B5563' stroke-width='3'/></svg>" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <!-- END - Carl Added -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+  <meta name="theme-color" content="#3B82F6" />
+  <meta name="description"
+    content="ShipKeep Co - Your premier destination for cruise bookings and maritime adventures" />
+  <link rel="apple-touch-icon"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><path d='M10 50 C 20 20, 80 20, 90 50' stroke='%234B5563' stroke-width='5' fill='none'/><path d='M5 80 L 95 80' stroke='%234B5563' stroke-width='3'/></svg>" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>React App</title>
+  <title>ShipKeep Co | Discover Your Dream Cruise</title>
 </head>
 
 <body>
